fixed the text overflow bug

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -409,3 +409,9 @@ hr.wide {
 		margin-left: 0.2em;
 	}
 }
+
+.btn{
+	white-space: normal;
+
+
+}
